Added source run of QSL in setup block

--- a/EDA/Kaitlyn_EDA/Kaitlyn_Initial_EDA_Visuals.qmd
+++ b/EDA/Kaitlyn_EDA/Kaitlyn_Initial_EDA_Visuals.qmd
@@ -11,10 +11,9 @@ grid:
 ```{r}
 #| label: Setup
 # ---
-  
+source("./EDA/Qualifying_Studies_List.R")  
 suppressPackageStartupMessages({
   library(ggplot2)
-  library(dplyr)
   library(knitr)
   library(patchwork)
 })
