Testing Microbiome Download; Fix Source Script Runs
Making test runs on local computer with Thomas AM 2018b to see how large
the file is as well as what types of data is downloaded.

Other misc bug fixes in other files.

I've attempted attaching Git to Sol, while it appears to attach, it
requires passwork rather than the PAT which seems odd. May need to
trouble shoot this. Perhaps an SSH key instead?

--- a/EDA/Kaitlyn_EDA/Kaitlyn_Initial_EDA_Tables.qmd
+++ b/EDA/Kaitlyn_EDA/Kaitlyn_Initial_EDA_Tables.qmd
@@ -9,7 +9,7 @@ editor: visual
 ```{r}
 #| label: Setup
 # ---
-  
+source("../Qualifying_Studies_List.R")  
 suppressPackageStartupMessages({
   library(dplyr)
   library(knitr)
