--- a/EDA/Kaitlyn_EDA/Kaitlyn_Initial_EDA_Visuals.qmd
+++ b/EDA/Kaitlyn_EDA/Kaitlyn_Initial_EDA_Visuals.qmd
@@ -11,7 +11,7 @@ grid:
 ```{r}
 #| label: Setup
 # ---
-source("./EDA/Qualifying_Studies_List.R")  
+source("../Qualifying_Studies_List.R")  
 suppressPackageStartupMessages({
   library(ggplot2)
   library(knitr)
