--- a/EDA/Group_EDA.qmd
+++ b/EDA/Group_EDA.qmd
@@ -9,29 +9,46 @@ author:
 ---
 
 ### Delete Before Submitting
-| Student | Assignment                                 |
-|---------|--------------------------------------------|
-| Cory    | Country & Category                         |
-| Kaitlyn | Age & Sex                                  |
-| Faith   | Limitations (Missing Data, Pop size, etc.) |
-| Jacob   | Summary Stats, Glossary & Introduction     |
+
++---------+---------------------------------------------------------------+
+| Student | Assignment                                                    |
++=========+===============================================================+
+| Cory    | Country & Category                                            |
++---------+---------------------------------------------------------------+
+| Kaitlyn | Age & Sex                                                     |
+|         |                                                               |
+|         | Data Availability Table (Show's what cMD has from each study) |
++---------+---------------------------------------------------------------+
+| Faith   | Limitations (Missing Data, Pop size, etc.)                    |
++---------+---------------------------------------------------------------+
+| Jacob   | Summary Stats, Glossary & Introduction                        |
++---------+---------------------------------------------------------------+
 
 ### Introduction
 
-
 ### Glossary
+
 Yada Yada Yada
 
 ##### Diagnostic Categories
-| Abbreviation | Description                                                                 |
-|--------------|-----------------------------------------------------------------------------|
-| HC           | Healthy control                                                            |
-| PA           | Polyp / adenoma                                                            |
-| PA+          | Polyp / adenoma with comorbidities                                         |
-| CRC          | Colorectal cancer                                                          |
-| CRC-H        | History of colorectal cancer with resection                                |
-| CRC+         | Colorectal cancer with comorbidities                                       |
-| Other        | Any diagnosed disease without current or history of CRC-related growths    |
+
++--------------+-------------------------------------------------------------------------+
+| Abbreviation | Description                                                             |
++==============+=========================================================================+
+| HC           | Healthy control                                                         |
++--------------+-------------------------------------------------------------------------+
+| PA           | Polyp / adenoma                                                         |
++--------------+-------------------------------------------------------------------------+
+| PA+          | Polyp / adenoma with comorbidities                                      |
++--------------+-------------------------------------------------------------------------+
+| CRC          | Colorectal cancer                                                       |
++--------------+-------------------------------------------------------------------------+
+| CRC-H        | History of colorectal cancer with resection                             |
++--------------+-------------------------------------------------------------------------+
+| CRC+         | Colorectal cancer with comorbidities                                    |
++--------------+-------------------------------------------------------------------------+
+| Other        | Any diagnosed disease without current or history of CRC-related growths |
++--------------+-------------------------------------------------------------------------+
 
 ### EDA
 
