Add references for Zotero functionality

--- a/EDA/Group_EDA.qmd
+++ b/EDA/Group_EDA.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Metagenomic EDA of Fecal Samples"
 format: pdf
+bibliography: references.bib
 author:
     - name: Kaitlyn Schisler
     - name: Cory Spern
